style(Accordion): ensure tooltips can overflow, fix padding

--- a/packages/styles/scss/components/accordion/_accordion.scss
+++ b/packages/styles/scss/components/accordion/_accordion.scss
@@ -154,7 +154,6 @@ $content-padding: 0 0 0 $spacing-05 !default;
   }
 
   .#{$prefix}--accordion__content {
-    overflow: hidden;
     padding-inline: layout.density('padding-inline');
 
     // Custom breakpoints based on issue #4993
@@ -201,6 +200,7 @@ $content-padding: 0 0 0 $spacing-05 !default;
 
     .#{$prefix}--accordion__wrapper {
       // Properties for when the accordion is open
+      overflow: visible;
       max-block-size: fit-content;
       opacity: 1;
       padding-block: $spacing-03;
